# TwsWebSocket

./: .gitignore  LICENSE  README.md  TwsSocketClient64.vcxproj  TwsWebSocket.json  meta.json  twsWebSocket-build.sh  win-install.sh
setup/: Setup.sln  Setup.vdproj  TwsWeb.bat  build-tws.bat
setup/Debug/: Setup.msi
setup/Release/: Setup.msi
source/: BlocklyWorker.cpp  BlocklyWorker.h  CMakeLists.txt  EWebReceive.h  EWebSend.h  Flex.cpp  Flex.h  Makefile  News.cpp  News.h  PreviousDayValues.cpp  PreviousDayValues.h  Resource.rc  TwsSendWorker.cpp  TwsSendWorker.h  TwsWebSocket.sln  TwsWebSocket.vcxproj  TwsWebSocket.vcxproj._user  TwsWebSocket.vcxproj.filters  TypeDefs.h  WatchListData.cpp  WatchListData.h  WebCoRequest.cpp  WebCoRequest.h  WebCoSocket.cpp  WebCoSocket.h  WebRequestWorker.cpp  WebRequestWorker.h  WebSendGateway.cpp  WebSendGateway.h  WebSocket.cpp  WebSocket.h  WebSocketReceive.cpp  WebSocketSend.cpp  WrapperWeb.cpp  WrapperWeb.h  build.sh  buildc.sh  main.cpp  pc.h  (+1 more)
source/requests/: EdgarRequests.cpp  EdgarRequests.h  News.cpp  News.h  Reddit.cpp  Reddit.h  Stats.cpp  Stats.h  Twitter.cpp  Twitter.h
sql/: mrk_statistic_update.ms.sql  mrk_statistic_update.sql  rdt_handle_block.sql  twt_tag_ignore.ms.sql  twt_tag_ignore.sql  twt_user_block.ms.sql  twt_user_block.sql  twt_user_insert.ms.sql  twt_user_insert.sql
